--- a/src/routes/menu-course/menu-course.css
+++ b/src/routes/menu-course/menu-course.css
@@ -1,7 +1,8 @@
 .menu-course {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  height: fit-content;
   background-color: #171717;
 }
 
